Fixed alignment of semester buttons

--- a/planner/planner/static/css/land.css
+++ b/planner/planner/static/css/land.css
@@ -154,6 +154,10 @@ body {
   }
 }
 
+#semesterRadioDiv {
+    display: grid;
+}
+
 #programInfoDiv div {
     vertical-align: top;
 }
